--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root">
-      <!-- things go here -->
+      <!-- components go here -->
     </div>
   </body>
 </html>
