--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Syncopate:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Mitr:400,500,700" rel="stylesheet">
 
     <title>Weathrly</title>
   </head>
